- adjust the column sizes to avoid wrapping in IE 11.

--- a/assets/css/log.css
+++ b/assets/css/log.css
@@ -1,6 +1,6 @@
 
 #right-log {
-    width: 31%;
+    width: 30%;
 	float: left;
 }
 #left-log {
